# kruk_screenshots

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build-check.yml  publish.yml  publish.yml.old
src/: main.rs
