[package]
name = "kruk_screenshots"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }
rdev = {version = "0.5.3", features = ["unstable_grab"]}
xcap = "0.0.12"

[profile.release]
lto = true
debug = 0
opt-level = "z"
panic = "abort"
strip = "symbols"