[package]
name = "kruk_screenshots"
version = "0.6.0"
edition = "2021"

[dependencies]
global-hotkey = "0.7.0"
xcap = "0.9.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
debug = 0
opt-level = "z"
panic = "abort"
strip = "symbols"
codegen-units = 1